# hw7

./: config.ini  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 000013b78ed4_init.py
src/: db.py  models.py
