[tool.poetry]
name = "hw7"
version = "0.1.0"
description = ""
authors = ["Moivvas <moivvas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.6.2"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
